--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -18,7 +18,7 @@
   </header>
   <main>
     <section id="product-container">
-      <img src="/images/{{product.image}}" alt="{{product.name}}"/>
+      <img src="{{product.image}}" alt="{{product.name}}"/>
       <form method="POST" action="/api/cart?inventoryId={{product.id}}">
         <h2>{{product.name}}</h2>
         <p>{{product.description}}</p>
@@ -43,5 +43,4 @@
   </footer>
 </body>
 </html>
-
 
