--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
       {{#each inventory}}
       <a href="/product/{{id}}" class="sale-item">
         <div class="item-img-container">
-          <img src="{{image}}" alt="{{name}}" />
+          <img src="/images/{{image}}" alt="{{name}}" />
           <p>{{description}}</p>
         </div>
         <p>{{name}}</p>
