--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -25,7 +25,7 @@
         {{#each cartItems}}
         <div class="cart-item">
           <a href="/product/{{inventoryId}}" class="cart-item-info">
-            <img src="{{image}}" alt="{{name}}" />
+            <img src="/images/{{image}}" alt="{{name}}" />
             <div>
               <p>{{name}}</p>
               <p>${{price}}</p>
